finished first draught.

--- a/BsDsstar.tex
+++ b/BsDsstar.tex
@@ -1,14 +1,14 @@
-\chapter{$B_s\to D_s^*l\nu$ Axial Form Factor at Zero Recoil from Heavy-HISQ}
+﻿\chapter{$B_s\to D_s^*l\nu$ Axial Form Factor at Zero Recoil from Heavy-HISQ}
 \label{chap:BsDsstar}
 
-This chapter concerns the simpler of our two heavy-HISQ studies, the calculation of the $B_s\to D^*_sl\nu$ form factor at zero recoil, $h^s_{A_1}(1)$ as defined in Sec. \ref{sec:weakdecays}. We give this quantity the superscript $s$ to differentiate it from the quantity more commonly referred to as $h_{A_1}(1)$, the zero recoil axial form factor for $B\to D^*l\nu$ decays.
+This chapter concerns the simpler of our two heavy-HISQ studies, the calculation of the $B_s\to D^*_sl\nu$ axial form factor at zero recoil, $h^s_{A_1}(1)$ as defined in Sec. \ref{sec:weakdecays}. We give this quantity the superscript $s$ to differentiate it from the quantity more commonly referred to as $h_{A_1}(1)$, the zero recoil axial form factor for $B\to D^*l\nu$ decays.
 
-We breifly review the definition of this form factor (at zero recoil) for clarity. The differential decay rate for the $\bar{B}_s^0\to D_s^{*+} l^- \bar{\nu}_l$ decay is given in the SM by
+We breifly review the definition of this form factor (at zero recoil) for ease of reading. The differential decay rate for the $\bar{B}_s^0\to D_s^{*+} l^- \bar{\nu}_l$ decay is given in the SM by
 \begin{align}
   {d \Gamma \over dw} &(\bar{B}_s^0\to D_s^{*+} l^- \bar{\nu}_l) = {G_F^2 M_{D_s^*}^3 | \eta_{\text{EW}} V_{cb} |^2 \over 4\pi^3}
 \\  &\times(M_{B_s}^2-M_{D_s^*}^2) \sqrt{w^2-1} \chi(w) | \mathcal{F}^{B_s\to D_s^*}(w) |^2. \nonumber
 \end{align}
-where $w = v_{B_s} \cdot v_{D^*_s}$, $v_H = p_H/M_H$ is the 4-velocity of a $H$-meson, and $\chi(w)$ is a known function of $w$ (see appendix G of \cite{Harrison:2017fmw}). $\eta_{\text{EW}}$ accounts for electroweak corrections due to diagrams where photons or $Z$s are exchanged in addition to a $W^-$, as well as the Coulomb attraction of the final-state charged particles \cite{SIRLIN198283,Ginsberg1968,PhysRevD.41.1736}. The differential decay rate for the $B_s^0\to D_s^{*-} l^+ \bar{\nu}_l$ is identical.
+where $w = v_{B_s} \cdot v_{D^*_s}$, $v_M = p_M/M_M$ is the 4-velocity of a $M$-meson, and $\chi(w)$ is a known function of $w$ (see for example appendix G of \cite{Harrison:2017fmw}). $\eta_{\text{EW}}$ accounts for electroweak corrections due to diagrams where photons or $Z$s are exchanged in addition to a $W^-$, as well as the Coulomb attraction of the final-state charged particles \cite{SIRLIN198283,Ginsberg1968,PhysRevD.41.1736}. The differential decay rate for the $B_s^0\to D_s^{*-} l^+ \bar{\nu}_l$ is identical.
 
 The form factor $\mathcal{F}^{B_s\to D_s^*}(w)$ is a linear combination of hadronic form factors that parameterize the vector and axial-vector matrix elements between initial and final state hadrons. At zero recoil ($w=1$), the vector matrix element vanishes, the axial-vector element simplifies to
 \begin{align}
@@ -26,13 +26,13 @@ All we need to do this is the matrix element $\langle D^*_s(\epsilon)| A^{\mu} |
 \label{sec:BsDsstar_intro}
 
 The $\bar{B}\to D^{*} l \bar{\nu}_l$ decay supplies one of the three methods used for precisely determining the CKM element $|V_{cb}|$ \cite{Schroder:1994aj,PhysRevLett.64.2117,PhysRevD.43.651,ALBRECHT1992195,Barish:1994mu,BUSKULIC1996449,Buskulic:1994dz,Abbiendi:2000hk,Abreu:2001ic,Adam:2002uw,Abdallah:2004rz,Aubert:2007rs,Aubert:2007qs,Aubert:2008yv,Dungel:2010uk,Abdesselam:2017kjf,Bailey:2014tva,Abdesselam:2018nnh}.
-Measurements of branching fractions are extrapolated through $q^2$ to the zero recoil point to deduce $h_{A_1}(1) |V_{cb}|$, where $h_{A_1}(1)$ is the only form factor contributing at zero recoil. Then an SM determination of $h_{A_1}(1)$ (via Lattice QCD \cite{Bailey:2014tva,Harrison:2017fmw}) can be divided out to infer $|V_{cb}|$.
+Measurements of branching fractions are extrapolated through $q^2$ to the zero recoil point to deduce $|h_{A_1}(1)V_{cb}|$, since $h_{A_1}(1)$ is the only form factor contributing at zero recoil. Then an SM determination of $h_{A_1}(1)$ (via Lattice QCD \cite{Bailey:2014tva,Harrison:2017fmw}) can be divided out to infer $|V_{cb}|$.
 
-A similar process that could also be used to determine $|V_{cb}|$, and test the SM, is $\bar{B}_s \to D^*_s l\bar{\nu}_l$. There is at time of writing no published measurements of this decay, but it is feasable to measure such a decay at a detector like LHCb. This decay is also attractive from the Lattice QCD side.
+A similar process that could also be used to determine $|V_{cb}|$, and test the SM, is $\bar{B}_s \to D^*_s l\bar{\nu}_l$. There is at time of writing no published measurements of this decay, but it is feasible to measure such a decay at a detector like LHCb. This decay is also attractive from the Lattice QCD side.
 
-The absense of valence light quarks means lattice QCD results have smaller statistical errors, are less computationally expensive, a simpler chiral extrapolation to the physical light mass, and negligable finite volume effects. This makes the $\bar{B}_s \to D^*_s l\bar{\nu}_l$ both a useful test bed for lattice techniques (that may be later used to study $\bar{B} \to D^* l \bar{\nu}_l$ decays), and a key decay to make predictions about for when experimental results become available.
+The absence of valence light quarks means lattice results have smaller statistical errors, are less computationally expensive, a simpler chiral extrapolation to the physical light mass, and negligible finite volume effects. This makes the $\bar{B}_s \to D^*_s l\bar{\nu}_l$ both a useful test bed for lattice techniques (that may be later used to study $\bar{B} \to D^* l \bar{\nu}_l$ decays), and a key decay to make predictions about for when experimental results become available.
 
-Chiral symmetry implies that form factors for decays such as $B_s \to D^*_s$ and $B \to D^*$ are insensitive to the mass of the spectator quark, since  implying that form factors for these two decays are approximately equal \cite{Laiho:2005ue}. This was seen in the recent lattice calculation \cite{Harrison:2017fmw} that found $h_{A_1}^{B_s\to D_s^*}(1) / h_{A_1}^{B\to D^*}(1) = 1.013(14)_{\text{stat}}(17)_{\text{sys}}$. We can then expect to learn about $B\to D^*$ by studying $B_s\to D_s^*$. We perform test of this claim, in the context of our formalism, in this study.
+Chiral symmetry implies that form factors for decays such as $B_s \to D^*_s$ and $B \to D^*$ are insensitive to the mass of the spectator quark, since  implying that form factors for these two decays are approximately equal \cite{Laiho:2005ue}. This was seen in the recent lattice calculation \cite{Harrison:2017fmw} that found $h_{A_1}^{B_s\to D_s^*}(1) / h_{A_1}^{B\to D^*}(1) = 1.013(14)_{\text{stat}}(17)_{\text{sys}}$. We can then expect to learn about $B\to D^*$ by studying $B_s\to D_s^*$. We perform a test of this claim, in the context of our formalism, in this study.
 
 Lattice calculations of the $B_{(s)} \to D_{(s)}^*$ form factors at zero recoil have so far been performed by two collaborations. The Fermilab Lattice collaboration produced $h_{A_1}^{B\to D^*}(1)$ in \cite{Bailey:2014tva}. HPQCD computed both $h_{A_1}^{B\to D^*}(1)$ and $h_{A_1}^{B_{s}\to D_{s}^*}(1)$ in \cite{Harrison:2017fmw}. The RBC/UKQCD \cite{Flynn:2016vej} and LANL-SWME \cite{Bailey:2017xjk} collaborations are also working towards these form factors.
 
@@ -46,7 +46,7 @@ In this chapter, we report details and results of the first calculation of the $
 
 Since the $B_s\to D_s$ form factor is approximately equal to the $B\to D$ form factor, and our results are non-perturbatively renormalised, this calculation can be seen as a check of the normalisation of the Fermilab Lattice and HPQCD determinations of $h_{A_1}(1)$ that contributed to $|V_{cb}|_{\text{excl}}$. While producing a quantity less relevant to current phenomenology than the $B\to D^*$ form factor, this calculation can be seen as a proof-of-principle for the heavy-HISQ approach. 
 
-Using the heavy-HISQ approach has the added benefit of eludicating the dependence of form factors on heavy quark masses, meaning we can test expectations from Heavy Quark Effective Theory (HQET). In this article we give a determination of the HQET low energy constants $l_{V,A,P}^s$ associated with the $B_s \to D_s^*$ form factor at zero recoil.
+Using the heavy-HISQ approach has the added benefit of eludicating the dependence of form factors on heavy quark masses, meaning we can test expectations from Heavy Quark Effective Theory (HQET). In this study, we give a determination of the HQET low energy constants $l_{V,A,P}^s$ associated with the $B_s \to D_s^*$ form factor at zero recoil.
 
 \section{Calculation Details}
 \label{sec:BsDsstar_deets}
@@ -55,7 +55,7 @@ Using the heavy-HISQ approach has the added benefit of eludicating the dependenc
 
 We use the MILC gluon field configurations detailed in Sec. \ref{sec:MILCensembles} \cite{Bazavov:2010ru,Bazavov:2012xda}. We use sets 2-5 in table \ref{tab:ensembles}, i.e., the fine, fine-physical, superfine and ultrafine ensembles. Table \ref{tab:BsDsensembles} gives the valence quark masses we use in the generation of quark propagators. In three of the four ensembles (fine,superfine and ultrafine), the bare light mass is set to $m_{l0}/m_{s0} = 0.2$. The fact that the $m_{l0}$ value is unphysically high is expected to have a small effect on $h^s_{A_1}(1)$, due to the lack of valence light quarks, and previous experience of the dependence of $h_{A_1}^s(1)$ on $m_{l0}$ \cite{Harrison:2017fmw}. The small effect due to the unphysical $m_{l0}$ is quantified by including a fourth ensemble (fine-physical) with physical $m_{l0}$, and corrected for.
 
-We use a number of different masses for the valence heavy quark. This is in order to resolve the dependence of $h_{A_1}^s(1)$ on the heavy mass, so that an extrapolation to $m_h=m_b$ can be performed. By varying the heavy mass varying both within ensembles and between ensembles, we can resolve both the discretization effects that grow with large ($am^{\text{val}}_{h0} \lesssim 1$) masses and the physical dependence of the continuum form factor on $m_h$.
+We use a number of different masses for the valence heavy quark. This is in order to resolve the dependence of $h_{A_1}^s(1)$ on the heavy mass so that extrapolation to $m_h=m_b$ can be performed. By varying the heavy mass varying both within ensembles and between ensembles, we can resolve both the discretization effects that grow with large ($am^{\text{val}}_{h0} \lesssim 1$) masses and the physical dependence of the continuum form factor on $m_h$.
 
 \begin{table}
   \begin{center}
@@ -78,28 +78,28 @@ We use a number of different masses for the valence heavy quark. This is in orde
   \label{tab:BsDsensembles}
 \end{table}
 
-As detailed in Sec. \ref{sec:staggeredcorrelators}, staggered correlation functions are built by a combination of staggered propagators $g(x,y)$ and staggered phases. In this calculation we only need local (non point-split) operators, this is an advantage since point-split operators lead to correlation functions more noisy than local operators. 
+As detailed in Sec. \ref{sec:staggeredcorrelators}, staggered correlation functions are built by a combination of staggered propagators $g(x,y)$ and staggered phases. In this calculation we only need local (non-point-split) operators, this is an advantage since point-split operators lead to correlation functions noisier than local operators. 
 
-We compute a number of correlation functions on each ensemble. To generate these correlators we use random wall sources, and use extended sources for the 3-point correlators, as described in Sec. \ref{sec:staggeredcorrelators}. First we compute 2-point correlation functions between zero-momentum eigenstates, objects of the form
+We compute a number of correlation functions on each ensemble. To generate these correlators we use random wall sources, and use extended sources for the 3-point correlators, as described in Sec. \ref{sec:staggeredcorrelators}. First, we compute 2-point correlation functions between zero-momentum eigenstates, objects of the form
 \begin{align}
   C_{M}(t) =& \langle \Phi_M (t) \Phi_M^{\dagger}(0) \rangle, \\ 
   &\Phi_M(t) = \sum_{{\bf{x}}} \bar{q}({\bf{x}},t) \Gamma q'({\bf{x}},t), \nonumber
 \end{align}
 where $\langle \rangle$ represents a functional integral, $q,q'$ are valence quark fields of the flavours the $M$ meson is charged under, and $\Gamma$ is the spin-taste structure of $M$. We compute these for all $t$ values, i.e. $0\leq t \leq N_t$. 
 
-We compute correlation functions for a heavy-strange pseudoscalar, $H_s$, with spin-taste structure $(\gamma_5\otimes \gamma_5)$. In terms of staggered propagators this takes the form
+We compute correlation functions for a heavy-strange pseudoscalar, $H_s$, with spin-taste structure $(\gamma_5\otimes \gamma_5)$. In terms of staggered propagators, this takes the form
 \begin{align}
-  C_{H_s}(t) = \sum_{\bf{x},\bf{y}} \text{Tr}\left[ g_h(x,y) g_s^{\dagger}(x,y) \right],
+  C_{H_s}(t) = \sum_{\bf{x},\bf{y}} \left\langle \text{Tr}_c\left[ g_h(x,y) g_s^{\dagger}(x,y) \right] \right\rangle,
   \label{eq:pseudoscalar_corrs}
 \end{align}
 where $g_q(x,y)$ is a staggered propagator for flavour $q$, and the trace is over color. Here $x_0=0$ and $y_0=t$, and the sum is over spacial sites {$\bf{x}$, $\bf{y}$}. We also compute correlators for a charm-strange vector meson $D_s^*$, with structure $(\gamma_{\mu}\otimes \gamma_{\mu})$, using
 \begin{align}
-  C_{D_s^*}(t) = \sum_{\bf{x},\bf{y}} (-1)^{x_{\mu}+y_{\mu}}\text{Tr}\left[ g_c(x,y) g_s^{\dagger}(x,y) \right].
+  C_{D_s^*}(t) = \sum_{\bf{x},\bf{y}} (-1)^{x_{\mu}+y_{\mu}} \left\langle \text{Tr}_c\left[ g_c(x,y) g_s^{\dagger}(x,y) \right] \right\rangle.
 \end{align}
 
 In order to non-perturbatively renormalise the axial vector current, we compute correlation functions for goldstone and non-goldstone pseudoscalar and heavy-charm mesons denoted $H_c$ and $\hat{H}_c$ respectively, where $H_c$ has spin-taste structure $\Gamma_P$, and $\hat{H}_c$ has structure $\Gamma^0_A$. $H_c$ correlators are computed using \eqref{eq:pseudoscalar_corrs} (with $g_s$ replaced with $g_c$), while $\hat{H}_c$ correlators are given by
 \begin{align}
-  C_{\hat{H}_c}(t) = \sum_{\bf{x},\bf{y}}(-1)^{\bar{x}_0+\bar{y}_0} \text{Tr}\left[ g_h(x,y) g^{\dagger}_c(x,y) \right],
+  C_{\hat{H}_c}(t) = \sum_{\bf{x},\bf{y}}(-1)^{\bar{x}_0+\bar{y}_0} \left\langle \text{Tr}_c\left[ g_h(x,y) g^{\dagger}_c(x,y) \right] \right\rangle,
 \end{align}
 where we use the notation $\bar{z}_{\mu} = \sum_{\nu\neq\mu} z_{\nu}$.
 
@@ -112,7 +112,7 @@ We then generate the 3-point correlation functions
 \end{align}
 In terms of the staggered formalism, the $H_s$ source is given structure $(\gamma_5\otimes \gamma_5)$, the $D_s^*$ sink is given $(\gamma_{\mu}\otimes \gamma_{\mu})$, and the current insertion $(\gamma_5\gamma_{\mu}\otimes \gamma_5\gamma_{\mu})$. In terms of staggered propagators this is given by
 \begin{align}
-  C_3(t,T) =& \sum_{{\bf{x},\bf{y},\bf{z}}} (-1)^{\bar{y}_{\mu}+\bar{z}_{\mu}}  \nonumber \\ &\times\text{Tr}\left[ g_h(x,y)g_c(y,z) g^{\dagger}_s(x,z) \right],
+  C_3(t,T) =& \sum_{{\bf{x},\bf{y},\bf{z}}} (-1)^{\bar{y}_{\mu}+\bar{z}_{\mu}}\left\langle \text{Tr}_c\left[ g_h(x,y)g_c(y,z) g^{\dagger}_s(x,z) \right] \right\rangle,
 \end{align}
 where we fix $x_0 = 0$, $y_0=t$ and $z_0=T$. We compute these for all $t$ values within $0\leq t\leq T$, and 3 $T$ values that vary between ensembles, given in table \ref{tab:BsDsensembles}.
 
@@ -175,7 +175,7 @@ We can check the ground-state energy of the correlator by looking at the large-$
 \end{align}
 It is straightforward to show from inspecting eq. \eqref{eq:multiexponential} that in the large $t$ (but $t < T_{\text{lat}}/2$) limit, this should tend towards the ground-state energy for the correlator. One can also construct a similar function for the amplitude:
 \begin{align}
-  a_{\text{eff}}(t) = \sqrt{\cosh E_{\text{eff}}(t)-1\over 2} \sqrt{ \tilde{C}(t) e^{E_{\text{eff}}t} }.
+  a_{\text{eff}}(t) = \sqrt{{\cosh E_{\text{eff}}(t)-1\over 2} \,\tilde{C}(t) e^{E_{\text{eff}}t} }.
   \label{eq:effectiveamp}
 \end{align}
 The second term would produce the correct amplitude (in the large-$t$ limit) in the absence of superaveraging, and the first corrects for the effect of the superaveraging \eqref{eq:superav2}. These functions, for various relevant correlators on the fine ensemble, are plotted in comparison with the full fit results in fig. \ref{fig:2pt-summary_BsDsstar}.
@@ -204,12 +204,12 @@ Conserved and partially conserved currents require no renormalization. However, 
 
 We leverage the fact that the staggered local pseudoscalar current $(\gamma^5\otimes \gamma^5)$, multiplied by the sum of masses of quark flavours the current is charged under, is absolutely normalized. We extract from the 2-point $H_c$ and $\hat{H}_c$ correlators the decay amplitudes $\langle \Omega | \bar{c} (\gamma_5\otimes \gamma_5) h | H_c \rangle \equiv \langle \Omega | P | H_c \rangle$, $\langle \Omega | \bar{c} (\gamma_0\gamma_5 \otimes \gamma_0\gamma_5) h | \hat{H}_c \rangle = \langle \Omega | A_0 | \hat{H}_c \rangle$. Then, the normalization for $A_0$ (common to that of spacial axial currents $A_k$) $Z_A$, is fixed by demanding that the partially conserved axial current relation holds-
 \begin{align}
-  (m^{\text{val}}_{h0} + m^{\text{val}}_{c0}) \langle \Omega | P | H_c \rangle|_{\text{lat}} = M_{\hat{H}_c} Z_A \langle \Omega | A^0 | \hat{H}_c \rangle|_{\text{lat}}.
+  (m^{\text{val}}_{h0} + m^{\text{val}}_{c0}) \langle \Omega | P | H_c \rangle|_{\text{lat}} = M_{\hat{H}_c} Z_A \langle \Omega | A_0 | \hat{H}_c \rangle|_{\text{lat}}.
   \label{eq:ward}
 \end{align}
 The $Z_A$ values found on each ensemble and $am^{\text{val}}_{h0}$ are given in table \ref{tab:norms}.
 
-There is an ambiguity in what mass to use on the right hand side of \eqref{eq:ward}, we here use the non-goldstone mass $M_{\hat{H}_c}$, but one could just as well replace this with $M_{H_c}$. Using $M_{H_c}$ here changes $Z_A$ only by discretization effects, the difference never exceeding 0.0015 throughout the ensembles and heavy masses. The choice between these two definitions of $Z_A$ does not effect the continuum result.
+There is an ambiguity in what mass to use on the right-hand side of \eqref{eq:ward}, we here use the non-goldstone mass $M_{\hat{H}_c}$, but one could just as well replace this with $M_{H_c}$. Using $M_{H_c}$ here changes $Z_A$ only by discretization effects, the difference never exceeding 0.0015 throughout the ensembles and heavy masses. The choice between these two definitions of $Z_A$ does not effect the continuum result.
 
 We also remove tree-level mass-dependent discretization effects, at leading order in $|{\bf{p}}_h|/m_h$, using a normalization constant derived in \cite{Bazavov:2017lyh}:
 \begin{align}
@@ -266,7 +266,7 @@ We now address the extrapolation of the $h_{A_1}^s(1)$ values to continuum and p
 Our extrapolation in the $m_h$ direction can be guided by HQET. The HQET expression for $h^s_{A_1}(1)$ (where here we consider both $h$ and $c$ to be heavy quarks in the HQET context) is given by \cite{Falk:1992wt,Mannel:1994kv}:
 \begin{align}
   \label{eq:hqet}
-  h_{A_1} &= \eta_A \left( 1 - {l_V\over (2m_c)^2} + {2l_A \over 2 m_c m_h} - { l_P \over (2m_h)^2 } \right)  \\ \nonumber &+ \mathcal{O}\left( \, {1\over m_c^n m_h^m}, \, n+m\geq 3 \, \right).
+  h_{A_1}(1) &= \eta_A \left( 1 - {l_V\over (2m_c)^2} + {2l_A \over 2 m_c m_h} - { l_P \over (2m_h)^2 } \right)  \\ \nonumber &+ \mathcal{O}\left( \, {1\over m_c^n m_h^m}, \, n+m\geq 3 \, \right).
 \end{align}
 $\eta_A$ accounts for matching between HQET and QCD, and has been computed at 2-loop: $\eta_A = 0.960(7)$ \cite{PhysRevLett.76.4124}. It is dependent on $m_h$, so one may worry that, if we are going to use this expression for the extrapolation in $m_h$, we must account for the $m_h$ dependence in $\eta_A$. However this dependence is weak in the region of $m_h$ we are interested in ($m_c \leq m_h \leq m_b$). This can be seen by examining how the 1-loop expression for $\eta_A$ varies with $m_h$ \cite{PASCHALIS1983473}:
 \begin{align}
@@ -363,9 +363,9 @@ where $c_l$ and $c_s$ are fit parameters with prior distributions $0\pm 1$, and 
 
 \subsubsection{Other Effects}
 
-The finite volume effects in our lattice results are negligable. Since the lightest valence quarks in our simulation are $s$ quarks, the lightest particles that can arise from loop diagrams in the decay are Kaons. In appendix F of \cite{Harrison:2017fmw}, the HMS$\chi$PT finite volume effect on the fine-physical ensemble, as a function of the lightest meson appearing in loops, was found (from the formulas derived in \cite{Laiho:2005ue}). At the Kaon mass, the finite volume effect is many orders of magnitude smaller than any of our other sources of error. Since one would expect the fine-physical ensemble to be where the dominant finite volume effects arise in our calculation, we can safely ignore finite volume effects in this analysis.
+The finite volume effects in our lattice results are negligible. Since the lightest valence quarks in our simulation are $s$ quarks, the lightest particles that can arise from loop diagrams in the decay are Kaons. In appendix F of \cite{Harrison:2017fmw}, the HMS$\chi$PT finite volume effect on the fine-physical ensemble, as a function of the lightest meson appearing in loops, was found (from the formulas derived in \cite{Laiho:2005ue}). At the Kaon mass, the finite volume effect is many orders of magnitude smaller than any of our other sources of error. Since one would expect the fine-physical ensemble to be where the dominant finite volume effects arise in our calculation, we can safely ignore finite volume effects in this analysis.
 
-In our simulation we set $m_u=m_d\equiv m_l$, this means our results do not account for isospin breaking. We tested for any possible influence this has on our fit, by moving the $m_l^{\text{tuned}}$ value up and down by the PDG value for $m_d-m_u$, and the effect was negligable in comparison to the other sources of error.
+In our simulation we set $m_u=m_d\equiv m_l$, this means our results do not account for isospin breaking. We tested for any possible influence this has on our fit, by moving the $m_l^{\text{tuned}}$ value up and down by the PDG value for $m_d-m_u$, and the effect was negligible in comparison to the other sources of error.
 
 In section \ref{sec:stability} we detail a number of other tests run on this fit.
 
@@ -426,7 +426,7 @@ The values extracted from correlation function fits for $h^s_{A_1}(1)$, along wi
       & 0.8 & 0.9422(72) & 1.11787(43) & \\ [0.5ex]
       \hline
     \end{tabular}
-    \caption{Values extracted from correlation function fits for $h^s_{A_1}(1)$, along with quantities required for it's extrapolation to the physical point. $h^s_{A_1}(1)$ values are found from eq. \eqref{eq:normalizations}. $f_{H_c}$  is the $H_c$ decay constant derived from eq. \eqref{eq:decayconstant}.  \label{tab:results} }
+    \caption{Values extracted from correlation function fits for $h^s_{A_1}(1)$, along with quantities required for it's extrapolation to the physical point. $h^s_{A_1}(1)$ values are found from eq. \eqref{eq:normalizations}. $f_{H_c}$  is the $H_c$ decay constant derived from the $H_c$ correlators and Eq. \eqref{eq:decayconstant_pseudoscalar}.  \label{tab:results} }
   \end{center}
 \end{table}
 
@@ -533,23 +533,13 @@ We performed a number of tests of the continuum/heavy mass extrapolation. The re
   \hspace{-18pt}
   \includegraphics[width=0.8\textwidth]{images/BsDsstar/hA1vsmh_fittests.pdf}
   
-  \caption{Results of $h_{A_1}^s(1)$ extrapolation tests. The top three blue points show $h_{A_1}^s(1)$ at continuum and physical $b$ mass, if data from the fine, superfine or ultrafine ensembles are not used in the fit. The fourth and fifth blue points show the result if data at the highest/lowest $am_{h0}^{\text{val}}$ value on each ensemble are removed. The point labelled 'No HQET input' is the result of a more naive heavy-mass extrapolation; the first line of \eqref{eq:fitform} is removed, and the sum in \eqref{eq:fitfun_hA1} is extended to include terms with $j+k=0$. An extra term to account for charm mass mistunings is added. The point labelled $N_{nuisance}=3$ is the result of extending the sum in \eqref{eq:fitfun_hA1} such that it truncates at 3 rather than 2 in each of the $i,j,k$ directions. The point labelled '$+1/m_b^3$' results from adding an extra term to \eqref{eq:fitform} of the form $p\varepsilon_h^3$ where $p$ is a fit parameter with the same prior as $l_{V,A,P}^s$. In this case, the Bayes factor falls by a factor of 7, suggesting that the data does not contain a cubic dependence on the heavy mass . The point labelled 'Ratio' is the result of an alternative extrapolation described in sec. \ref{sec:stability}.  \label{fig:fittests}}
+  \caption{Results of $h_{A_1}^s(1)$ extrapolation tests. The top three blue points show $h_{A_1}^s(1)$ at continuum and physical $b$ mass if data from the fine, superfine or ultrafine ensembles are not used in the fit. The fourth and fifth blue points show the result if data at the highest/lowest $am_{h0}^{\text{val}}$ value on each ensemble are removed. The point labelled 'No HQET input' is the result of a more naive heavy-mass extrapolation; the first line of \eqref{eq:fitform} is removed, and the sum in \eqref{eq:fitfun_hA1} is extended to include terms with $j+k=0$. An extra term to account for charm mass mistuning is added. The point labelled $N_{nuisance}=3$ is the result of extending the sum in \eqref{eq:fitfun_hA1} such that it truncates at 3 rather than 2 in each of the $i,j,k$ directions. The point labelled '$+1/m_b^3$' results from adding an extra term to \eqref{eq:fitform} of the form $p\varepsilon_h^3$ where $p$ is a fit parameter with the same prior as $l_{V,A,P}^s$. In this case, the Bayes factor falls by a factor of 7, suggesting that the data does not contain a cubic dependence on the heavy mass. The point labelled 'Ratio' is the result of an alternative extrapolation described in Sec. \ref{sec:stability}.  \label{fig:fittests}}
     \end{center}
 \end{figure}
 
 One of the tests requires some explaination, the result of which is given in fig. \ref{fig:fittests}, labelled 'Ratio'. We performed a continuum/heavy mass extrapolation in the ratio $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$. $f_{H_c}$ is found from fitting the $H_c$ correlation functions to obtain $a_0^{H_c}$, and using eq. \eqref{eq:decayconstant_pseudoscalar}. Since we create the $H_c$ mesons with a local HISQ pseudoscalar current, which is absolutely normalized, no normalization of $f_{H_c}$ is required here. Details of the extrapolation are given in appendix \ref{sec:ratio_extrap}, and results are shown in fig. \ref{fig:fHc}. Discretization effects cancel to a large extent in this ratio, it however varies strongly with changing heavy mass. This makes the extrapolation very different to the extrapolation in $h_{A_1}^s(1)$, which has large discretization effects but has little variation in the heavy mass. Hence the two extrapolations have quite different systematics.
 
-We also performed an extrapolation of $f_{H_c}$ to continuum and physical $b$, following precisely the methodology of \cite{McNeile:2012qf}, and sumarized in sec \ref{sec:ratio_extrap}. The result of the extrapolation of $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$ at continuum and physical $b$ mass was multiplied by our $f_{B_c}$ result, and the PDG value for $M_{B_c}$ \cite{PhysRevD.98.030001}, to obtain a second determination of $h_{A_1}^s(1)$. This is the result given in fig. \ref{fig:fittests} labelled 'Ratio'.
-
-\begin{figure}[htb!]
-  \begin{center}
-  \hspace{-10pt}
-  \includegraphics[width=0.85\textwidth]{images/BsDsstar/hA1overfHc.pdf}
-  \caption{ $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$ against $M_{\eta_h}$ (a proxy for the heavy quark mass). The grey band shows the result of the extrapolation at $a=0$ and physical $l$,$s$ and $c$ masses. Sets listed in the legend follow the order of sets in table \ref{tab:BsDsensembles}. The black point shows our final result for $h_{A_1}^s(1)$ divided by $\sqrt{M_{B_c}}$ from the PDG \cite{PhysRevD.98.030001} and $f_{B_c}$ from our extrapolation of $f_{H_c}$ to continuum and physical $b$ mass. \label{fig:fHc}}
-  \end{center}
-\end{figure}
-
-In fig. \ref{fig:comparison}, we show all current lattice results for $h_{A_1}(1)$ and $h_{A_1}^s(1)$. In fig. \ref{fig:fermilab_data}, we show lattice data from the previous FNAL/MILC and HPQCD, along with their final results, and the final result of this study, against 'pion mass'. Here pion mass refers to the mass of a pion containing quarks with the mass of the spectator quark. Here we can see that the FNAL/MILC lattice data is very flat in the spectator quark mass, so if they were to extrapolate their data to find $h^s_{A_1}(1)$, it would broadly be in agreement with out result.
+In fig. \ref{fig:comparison}, we show all current lattice results for $h_{A_1}(1)$ and $h_{A_1}^s(1)$. In fig. \ref{fig:fermilab_data}, we show lattice data from the previous FNAL/MILC and HPQCD, along with their final results, and the final result of this study, against 'pion mass'. Here pion mass refers to the mass of a pion containing quarks with the mass of the spectator quark. Here we can see that the FNAL/MILC lattice data is very flat in the spectator quark mass, so if they were to extrapolate their data to find $h^s_{A_1}(1)$, it would broadly be in agreement without result.
 
 \begin{figure}[htb!]
   \begin{center}
@@ -625,12 +615,12 @@ An estimate from the ISGW model for $B\to D^*$ decays gives \cite{PhysRevD.39.79
 \end{align}
 One does not expect these to differ significantly from $l_{V,A,P}^s$. These are of the same order of magnitude as our results. It is notable however that we find a different sign for $l_P$ to the ISGW result.
 
-\subsection{Extrapolation of $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$ and $f_{H_c}$}
+\subsection{Extrapolation of $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$}
 \label{sec:ratio_extrap}
 
 As a consistency test of our result we also perform extrapolations in $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$ and $f_{H_c}$, then combine them to find a second determination of $h_{A_1}^s(1)$.
 
-Both extrapolations use a fit function of the form
+To do this we followed precisely the methodology of \cite{McNeile:2012qf}. Both extrapolations use a fit function of the form
 \begin{align}
   \label{eq:fitfun_ratio}
   \nonumber
@@ -640,6 +630,16 @@ Both extrapolations use a fit function of the form
 \end{align}
 $\alpha_s(M)$ is the QCD coupling constant evaluated at scale $M$. $p$ is a fit parameter with prior distribution $\pm2/9\pm 1/9$, $+$ for $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$ and $-$ for $f_{H_c}$. $n=0$ for $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$ and $n=-1$ for $f_{H_c}$. The $M_{\eta_h}^{n/2}$ accounts for the leading order dependance of $f_{H_c}$ in HQET, and the $\alpha_s$ ratio comes from matching between QCD and HQET of $f_{H_c}$. $\mathcal{N}_{\text{mistuning}}$ is defined in \ref{eq:mistuning}.
 
+\begin{figure}[htb!]
+  \begin{center}
+  \hspace{-10pt}
+  \includegraphics[width=0.70\textwidth]{images/BsDsstar/hA1overfHc.pdf}
+  \caption{ $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$ against $M_{\eta_h}$ (a proxy for the heavy quark mass). The grey band shows the result of the extrapolation at $a=0$ and physical $l$,$s$ and $c$ masses. Sets listed in the legend follow the order of sets in table \ref{tab:BsDsensembles}. The black point shows our final result for $h_{A_1}^s(1)$ divided by $\sqrt{M_{B_c}}$ from the PDG \cite{PhysRevD.98.030001} and $f_{B_c}$ from our extrapolation of $f_{H_c}$ to continuum and physical $b$ mass. \label{fig:fHc}}
+  \end{center}
+\end{figure}
+
+The result of the extrapolation of $h_{A_1}^s(1)/(f_{H_c}\sqrt{M_{H_c}})$ at continuum and physical $b$ mass was multiplied by our $f_{B_c}$ result, and the PDG value for $M_{B_c}$ \cite{PhysRevD.98.030001}, to obtain a second determination of $h_{A_1}^s(1)$. This is the result given in fig. \ref{fig:fittests} labelled 'Ratio'.
+
 The extrapolation in $f_{H_c}$ is shown in fig. \ref{fig:fHc_vsmh}. We here include the result from a previous heavy-HISQ determination of $f_{B_c}$ on 2+1 gauge ensembles \cite{McNeile:2012qf}. Our result is slightly higher than theirs, since their study used only unphysically heavy light quarks ($m_l/m_s\simeq=0.2$), and did not control for associated effects. Our final result for this quantity is
 \begin{align}
   f_{B_c} = 0.4350(55).
@@ -648,7 +648,7 @@ The extrapolation in $f_{H_c}$ is shown in fig. \ref{fig:fHc_vsmh}. We here incl
 \begin{figure}[htb!]
   \begin{center}
   \hspace{-20pt}
-  \includegraphics[width=0.90\textwidth]{images/BsDsstar/fHcvsmh.pdf}
+  \includegraphics[width=0.70\textwidth]{images/BsDsstar/fHcvsmh.pdf}
   \caption{ $h_{A_1}^s(1)$ against $M_{\eta_h}$ (a proxy for the heavy quark mass). The grey band shows the result of the extrapolation at $a=0$ and physical $l$,$s$ and $c$ masses. Sets listed in the legend follow the order of sets in table \ref{tab:BsDsensembles}. The red point shows the result from a previous heavy-HISQ determination of $f_{B_c}$ on 2+1 gauge ensembles \cite{McNeile:2012qf}\label{fig:fHc_vsmh}}.
   \end{center}
 \end{figure}
@@ -660,5 +660,5 @@ We have produced a fully non-perturbative determination of $h_{A_1}^s(1)$, somet
 
 This study supplies an independent check of the NRQCD formalism used in previous HPQCD studies. It is also much more precise, in the case of $h_{A_1}^s$, the total fractional error has been halved in comparison to the NRQCD determination. The comparative precision resulting from the heavy-HISQ method suggests that it is well suited to computing other form factors associated with $b$-decays. A sister paper, studying the $B_s\to D_s$ form factors throughout the physical $q^2$ range, is in progress.
 
-Various improvements to this study could be implemented in future calculations. For example - since the uncertainty is dominated by statistics, more lattice data should be included. One useful innovation that was not used here is the Covariant Approximation Averaging approach to solving quark propagators \cite{PhysRevD.91.114511}, this could significantly boost statistics while keeping computational cost manageable.
-%%
+%% Various improvements to this study could be implemented in future calculations. For example - since the uncertainty is dominated by statistics, more lattice data should be included. One useful innovation that was not used here is the Covariant Approximation Averaging approach to solving quark propagators \cite{PhysRevD.91.114511}, this could significantly boost statistics while keeping the computational cost manageable.
+%% %%
