--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,4 +1,21 @@
 
+@article{Hughes:2017spc,
+      author         = "Hughes, C. and Davies, C. T. H. and Monahan, C. J.",
+            title          = "{New methods for B meson decay constants and form factors
+                        from lattice NRQCD}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D97",
+				          year           = "2018",
+					        number         = "5",
+						      pages          = "054509",
+						            doi            = "10.1103/PhysRevD.97.054509",
+							          eprint         = "1711.09981",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            reportNumber   = "FERMILAB-PUB-17-547-T",
+										          SLACcitation   = "%%CITATION = ARXIV:1711.09981;%%"
+											  }
+
 @article{McNeile:2010ji,
       author         = "McNeile, C. and Davies, C. T. H. and Follana, E. and
                         Hornbostel, K. and Lepage, G. P.",
