--- a/Thesis.tex
+++ b/Thesis.tex
@@ -25,6 +25,7 @@ I claim sole credit for everything in this thesis.
 \include{nrqcd} % NRQCD studies
 \include{BsDsstar} % Bs-Ds* at zero recoil with Heavy HISQ
 \include{BsDs} % Bs-Ds for all q^2 with Heavy HISQ
+\include{conclusions}
 
 % \appendix
 
