--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -61,25 +61,24 @@ All results and figures presented in these chapters are my own, except for figur
 
 {\red{TODO:
 
-    Conclusion
+    we$\to$ I
 
+    $\gamma_x \to \Omega(x)$
+
+    eq$\to$Eq., fig$\to$ Fig., etc.
+    
+    $E\,\, /\,\, aE$ consistency
+
+    update all results
+
+    $S^{(1)}$ radiative correction!!!
+
+    nrqcd: emphasize that normalization problems mostly as you move away from zero recoil, zero momentum normalizations are basically fine...
+    
     tadpole improvement?
-
-    Chiral symmetry section - say why $B_s\to D_s$ and $B\to D$ are approx. equal.
-
-    acknowledge NRQCD has no continuum limit in lattice NRQCD section...
 
     Luke's theorem bit needs to be tighter, specifically why you get specific $h_{A_1},h_+$ expressions.
 
-    READING LIST:
-    
-    Lenz, Flavour physics lectures. 1812.11211, 1703.08170
-
-    'The B-physics program' :https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4737432/\#andp201500230-sec-0020title
-
-    Chiral Anomalies and rooted staggered fermions - Creutz
-
-    Conjugate Gradient without the excruciating pain
 }}
 
 
