--- a/formatAndDefs.tex
+++ b/formatAndDefs.tex
@@ -19,6 +19,8 @@
 \renewcommand{\baselinestretch}{1.3}
 % Table of contents for each chapter
 
+\DeclareUnicodeCharacter{FEFF}{} 
+
 \usepackage{rotating}
 
 \newcommand\brachat[1]{\mathord{\mathop{#1}\limits^{\scriptscriptstyle(\wedge)}}}
